test/parsetest/valid/prefix_neg_and_binary.java
class Valid6 {

	public static void main(String[] args) {
		int i = 1 - - - - - - - - - 2;
	}

}
