test/parsetest/invalid/empty_while_code.java
class Invalid4 {

	public static void main(String[] args) {
		while () { }
	}

}
